--- a/index.html
+++ b/index.html
@@ -154,23 +154,15 @@
             <div class="flex justify-center my-3">
                  <img src="https://placehold.co/300x80/02407e/FFFFFF?text=SESAU+AQUIDAUANA&font=raleway" alt="Logótipo da Instituição" class="header-logo">
                 <!-- 
-                     INSTRUÇÃO IMPORTANTE: 
-                     Substitua o URL acima em "src" pelo URL real do seu logótipo.
-                     Por exemplo: src="URL_DO_SEU_LOGO_AQUI.png" 
-                     A imagem de exemplo é: Logo SESAU - Copia.jpg que você carregou.
-                     Você pode ajustar as classes 'max-w-xs' (largura máxima) e 'h-auto' (altura automática)
-                     ou usar CSS personalizado na classe 'header-logo' para dimensionar o seu logótipo.
-                 -->
+                    INSTRUÇÃO IMPORTANTE: 
+                    Substitua o URL acima em "src" pelo URL real do seu logótipo.
+                    Por exemplo: src="URL_DO_SEU_LOGO_AQUI.png" 
+                    A imagem de exemplo é: Logo SESAU - Copia.jpg que você carregou.
+                    Você pode ajustar as classes 'max-w-xs' (largura máxima) e 'h-auto' (altura automática)
+                    ou usar CSS personalizado na classe 'header-logo' para dimensionar o seu logótipo.
+                -->
             </div>
-            <p class="text-gray-600 mt-1">Dev.: Enf. Daniel F. Marmol - Coord. Saúde Digital (adaptado para web)</p>
-            <div class="text-gray-600 mt-1 text-sm">
-                <a href="https://wa.me/5567992178731" target="_blank" class="inline-flex items-center text-blue-600 hover:text-blue-800 hover:underline">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp mr-2" viewBox="0 0 16 16">
-                        <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943s-.182-.15-.38-.25z"/>
-                    </svg>
-                    Dúvidas? Entre em contato
-                </a>
-            </div>
+            <p class="text-gray-600 mt-1">Desenvolvido por: Enf. Daniel F. Marmol - Coord. Saúde Digital (adaptado para web)</p>
             <div id="globalStatusMessage" class="status-message" style="display: none;"></div>
         </header>
 
@@ -272,13 +264,13 @@
                     
                     <div class="mt-8 flex flex-wrap justify-end items-center gap-3">
                          <button type="button" id="printMentalHealthReportButton" class="btn btn-success">
-                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer-fill mr-2" viewBox="0 0 16 16"><path d="M5 1a2 2 0 0 0-2 2v1h10V3a2 2 0 0 0-2-2H5zm6 8H5a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1z"/><path d="M0 7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-1v-2a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2H2a2 2 0 0 1-2-2V7zm2.5 1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"/></svg>
-                             Imprimir Ficha SM
-                         </button>
-                         <button type="button" id="clearMentalHealthFormButton" class="btn btn-warning">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer-fill mr-2" viewBox="0 0 16 16"><path d="M5 1a2 2 0 0 0-2 2v1h10V3a2 2 0 0 0-2-2H5zm6 8H5a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1z"/><path d="M0 7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-1v-2a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2H2a2 2 0 0 1-2-2V7zm2.5 1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"/></svg>
+                            Imprimir Ficha SM
+                        </button>
+                        <button type="button" id="clearMentalHealthFormButton" class="btn btn-warning">
                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eraser mr-2" viewBox="0 0 16 16"><path d="M8.086 1.012a.5.5 0 0 1 .633.065l4 4a.5.5 0 0 1 0 .708l-5.5 5.5a.5.5 0 0 1-.708 0L1.512 6.286a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .633-.065zM4.293 2.293 2.146 4.44l1.06 1.06L5.354 3.354zm8.56.56L10.707 5l1.061 1.06L13.914 4zM3.586 5.5 2.5 6.586l4.293 4.293L7.854 9.8l-4.268-4.3z"/></svg>
-                             Limpar Ficha SM
-                         </button>
+                            Limpar Ficha SM
+                        </button>
                         <button type="button" id="cancelMentalHealthFormButton" class="btn btn-secondary">Fechar</button>
                     </div>
                     <div id="mentalHealthPrintStatus" class="status-message mt-2" style="display: none;"></div>
@@ -658,12 +650,12 @@
                 const isMhFormEffectivelyStarted = mhNomeForCheck || document.getElementById('mh_data_nascimento')?.value || document.getElementById('mh_microarea_mh')?.value;
 
                 if (!isMhFormEffectivelyStarted) {
-                    doc.deletePage(doc.internal.getNumberOfPages()); 
-                    doc.addPage(); 
-                    yPosition = pageMargin + 5;
-                    yPosition = addTextToPdf(doc, "Ficha de Sinais de Alerta em Saúde Mental", pageWidth / 2, yPosition, { fontSize: 14, style: 'bold', align: 'center' }, usableWidth, pageMargin); 
-                    yPosition += sectionSpacing;
-                    yPosition = addTextToPdf(doc, "Nenhum dado da Ficha de Saúde Mental para imprimir.", pageMargin, yPosition, { fontSize: 10, style: 'italic' }, usableWidth, pageMargin);
+                     doc.deletePage(doc.internal.getNumberOfPages()); 
+                     doc.addPage(); 
+                     yPosition = pageMargin + 5;
+                     yPosition = addTextToPdf(doc, "Ficha de Sinais de Alerta em Saúde Mental", pageWidth / 2, yPosition, { fontSize: 14, style: 'bold', align: 'center' }, usableWidth, pageMargin); 
+                     yPosition += sectionSpacing;
+                     yPosition = addTextToPdf(doc, "Nenhum dado da Ficha de Saúde Mental para imprimir.", pageMargin, yPosition, { fontSize: 10, style: 'italic' }, usableWidth, pageMargin);
                 }
 
                 const finalPageNum = doc.internal.getNumberOfPages();
@@ -756,8 +748,8 @@
                     if (radioNao) radioNao.checked = false; 
                 }
                 if (item.fixedMultiplier === undefined) { 
-                    const multiplicadorInput = document.getElementById(`${item.id}_multiplicador`);
-                    if (multiplicadorInput) multiplicadorInput.value = "1"; 
+                     const multiplicadorInput = document.getElementById(`${item.id}_multiplicador`);
+                     if (multiplicadorInput) multiplicadorInput.value = "1"; 
                 }
             });
             const inputMoradores = document.getElementById('num_moradores');
