--- a/bhv12.html
+++ b/bhv12.html
@@ -214,7 +214,7 @@
             <div class="bg-white w-full overflow-x-auto">
                 <table class="table-custom">${headerHTML}${bodyHTML}${footerHTML}</table>
                 <div style="margin-top:24px;" class="p-3 bg-gray-50 rounded-md">
-                    <div class="text-xs text-gray-500 mb-2 text-center">Atalhos: Pressione <strong>/</strong> para repetir o valor para baixo, <strong>*</strong> para limpar a coluna, <strong>Enter</strong> para ir para baixo.</div>
+                    <div class="text-xs text-gray-500 mb-2 text-center">Atalhos: Pressione <strong>/</strong> para repetir valor, <strong>*</strong> para limpar para baixo, <strong>Enter</strong> para descer.</div>
                     <table class="w-full">
                         <tbody>
                             <tr><td class="summary-label text-center">Manhã</td><td class="summary-label text-center">TARDE</td><td class="summary-label text-center">NOITE</td><td class="summary-label text-center" colspan="2">Balanço 24h</td></tr>
@@ -320,11 +320,13 @@
                  statusIndicator.textContent = 'Salvando...'; statusIndicator.className = 'saving';
                  const docRef = doc(db, "artifacts", appId, "public", "beds", `leito-${bedIndex + 1}`);
                  setDoc(docRef, data, { merge: true }).then(() => {
-                     statusIndicator.textContent = 'Salvo'; statusIndicator.className = 'saved';
+                     statusIndicator.textContent = 'Salvo';
+                     statusIndicator.className = 'saved';
                      setTimeout(() => { if (statusIndicator.textContent === 'Salvo') statusIndicator.textContent = 'Conectado'; }, 2000);
                  }).catch(error => {
                      console.error("Falha ao salvar:", error);
-                     statusIndicator.textContent = 'Erro ao salvar'; statusIndicator.className = 'error';
+                     statusIndicator.textContent = 'Erro ao salvar';
+                     statusIndicator.className = 'error';
                  });
              };
 
@@ -417,7 +419,7 @@
             if (target.matches('.clear-col-button')) {
                 const colToClear = target.dataset.col;
                 if (colToClear) {
-                    pane.querySelectorAll(`.data-input[data-col="${colToClear}"]`).forEach(input => { input.value = ''; });
+                    pane.querySelectorAll(`tbody .data-input[data-col="${colToClear}"]`).forEach(input => { input.value = ''; });
                     calculateAllTotals(pane);
                     saveBedData(bedIndex, true);
                 }
@@ -428,7 +430,7 @@
                 if (lastFocusedInput && lastFocusedInput.matches(`[data-col="${colToRepeat}"]`) && pane.contains(lastFocusedInput)) {
                     const currentValue = lastFocusedInput.value;
                     if (currentValue) {
-                        const allRows = Array.from(pane.querySelectorAll('tbody tr'));
+                        const allRows = Array.from(pane.querySelectorAll('tbody tr.data-row'));
                         const currentRowIndex = allRows.indexOf(lastFocusedInput.closest('tr'));
                         for (let i = currentRowIndex + 1; i < allRows.length; i++) {
                             const nextInput = allRows[i].querySelector(`.data-input[data-col="${colToRepeat}"]`);
@@ -462,14 +464,26 @@
             const pane = lastFocusedInput.closest('.bed-pane');
             if (!pane) return;
             const bedIndex = parseInt(pane.dataset.bedIndex, 10);
+            const tableBody = lastFocusedInput.closest('tbody');
+
+            // Handle shortcuts only if focused inside the table body
+            if (!tableBody) return;
 
             // Navigate with Enter
             if (event.key === 'Enter') {
                 event.preventDefault();
-                const allInputs = Array.from(pane.querySelectorAll('tbody .data-input:not([readonly])'));
-                const currentIndex = allInputs.indexOf(lastFocusedInput);
-                const nextInput = allInputs[currentIndex + 1];
-                if (nextInput) { nextInput.focus(); nextInput.select(); }
+                const currentCell = lastFocusedInput.closest('td');
+                const currentRow = currentCell.closest('tr');
+                const allRows = Array.from(tableBody.querySelectorAll('tr.data-row'));
+                const cellIndex = Array.from(currentRow.children).indexOf(currentCell);
+                const rowIndex = allRows.indexOf(currentRow);
+
+                if (rowIndex < allRows.length - 1) {
+                    const nextRow = allRows[rowIndex + 1];
+                    const nextCell = nextRow.children[cellIndex];
+                    const nextInput = nextCell?.querySelector('.data-input:not([readonly])');
+                    if (nextInput) { nextInput.focus(); nextInput.select(); }
+                }
             }
 
             // Shortcut to Repeat Value Downwards
@@ -478,7 +492,7 @@
                 const colToRepeat = lastFocusedInput.dataset.col;
                 const currentValue = lastFocusedInput.value;
                 if (currentValue && colToRepeat) {
-                    const allRows = Array.from(pane.querySelectorAll('tbody tr'));
+                    const allRows = Array.from(tableBody.querySelectorAll('tr.data-row'));
                     const currentRowIndex = allRows.indexOf(lastFocusedInput.closest('tr'));
                     for (let i = currentRowIndex + 1; i < allRows.length; i++) {
                         const nextInput = allRows[i].querySelector(`.data-input[data-col="${colToRepeat}"]`);
@@ -489,12 +503,19 @@
                 }
             }
 
-            // Shortcut to Clear Column
+            // MODIFIED: Shortcut to Clear Column Downwards
             if (event.key === '*') {
                 event.preventDefault();
                 const colToClear = lastFocusedInput.dataset.col;
                 if (colToClear) {
-                    pane.querySelectorAll(`.data-input[data-col="${colToClear}"]`).forEach(input => { input.value = ''; });
+                    const allRows = Array.from(tableBody.querySelectorAll('tr.data-row'));
+                    const currentRowIndex = allRows.indexOf(lastFocusedInput.closest('tr'));
+                    // Iterate from the current row downwards
+                    for (let i = currentRowIndex; i < allRows.length; i++) {
+                        const row = allRows[i];
+                        const inputToClear = row.querySelector(`.data-input[data-col="${colToClear}"]`);
+                        if (inputToClear) inputToClear.value = '';
+                    }
                     calculateAllTotals(pane);
                     saveBedData(bedIndex, true);
                 }
@@ -525,3 +546,4 @@
 
 </body>
 </html>
+
