--- a/bhv12.html
+++ b/bhv12.html
@@ -53,7 +53,7 @@
             cursor: pointer; color: white; border: none; border-radius: 4px;
             width: 18px; height: 18px; font-size: 14px; line-height: 18px;
             text-align: center; font-weight: bold; transition: background-color 0.2s;
-        }
+        }print(google_search.search(queries=["github SESAU bhv12.html"]))
         .clear-col-button { background-color: #e57373; }
         .clear-col-button:hover { background-color: #c00000; }
         .repeat-col-button { background-color: #64b5f6; }
