--- a/bhv13.html
+++ b/bhv13.html
@@ -166,6 +166,7 @@
         #firebase-status.saved { background-color: #28a745; }
         #firebase-status.error { background-color: #dc3545; }
         #user-id-display { font-size: 10px; color: #666; padding: 5px; text-align: center; background: #f0f0f0; border-radius: 4px; margin-top: 10px; word-break: break-all; }
+        
     </style>
 </head>
 <body>
@@ -195,11 +196,9 @@
     // #######################################################################
     // ####################     CONFIGURAÇÃO FIREBASE     ####################
     // #######################################################################
-    // NOTA: As suas credenciais do Firebase estão aqui.
-    // Em um ambiente de produção, é mais seguro usar regras de segurança
-    // e potencialmente um backend para gerenciar chaves.
+    // Configuração do Firebase com as chaves corretas do seu projeto.
     const firebaseConfig = {
-        apiKey: "AIzaSyBRY_EgyfDjnGK5-1DsQI01C1QobayPc-k",
+        apiKey: "AIzaSyBRY_EgyfDjnGKS-1DsQI01C1QobayPc-k",
         authDomain: "strabalho-9a69a.firebaseapp.com",
         projectId: "strabalho-9a69a",
         storageBucket: "strabalho-9a69a.appspot.com",
